<resources>
    <string name="admob_app_id_test" translatable="false"> ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id_test" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="admob_app_open_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
    <string name="admob_interstitial_ad_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_ad_id_test" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_app_id_release" translatable="false">ca-app-pub-9844943887550892~3638913015</string>
    <string name="admob_banner_id_release" translatable="false">ca-app-pub-9844943887550892/4292098259</string>
    <string name="admob_native_ad_id_release_home_screen" translatable="false">ca-app-pub-9844943887550892/7808160688</string>
    <string name="admob_app_open_ad_unit_id_release" translatable="false">ca-app-pub-9844943887550892/7014889545</string>
    <string name="admob_interstitial_ad_id_release" translatable="false">ca-app-pub-9844943887550892/9233858779</string>
    <string name="admob_native_ad_id_release_language_screen" translatable="false">ca-app-pub-9844943887550892/7563556018</string>
    <string name="admob_native_ad_id_release_onboarding_screen" translatable="false">ca-app-pub-9844943887550892/7563556018</string>
    <string name="admob_native_ad_id_release_edit_screen" translatable="false">ca-app-pub-9844943887550892/2683678123</string>
    <string name="string_licence_key_google_play" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuwd2Y2BhXOr7LqSdbMrlB6R3ROdrOoHkQAmWYNzhCQtmRr4rfoDXB0ykMHqlEaN4HpEIpG8Pt6pQO8wi++kVDtZe/V4kiBq+eQTv3BL4l0LHw469/MA1IkIdEOhSwo3kNCaOgLdLTC5eIAzCOJU50QLMib2x18VmgfqjD+UonfMKkbaK3SXfOXw7y42H2zwn9mweBgCCgntAM8/+TztK8lLZqX1eXSqD+VeFuie5nqkr47qWAocECGmTpXniRYKe30K51wWx1eUNdoa9mKY14sAoMosuvgVHd1+jybRq3rQTqQGKGx+cSMN3OTj+yHhXn1zx5ve0ij9htN5cElgFXQIDAQAB</string>
    <string name="app_name" translatable="false">Authenticator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_error">Error</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_signup_desc">It was popularised in the 1960s with the release of Letraset sheetscontaining Lorem Ipsum.</string>
    <string name="string_google">Google</string>
    <string name="string_or">Or</string>
    <string name="string_name">Name</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_create_account">Create Account</string>
    <string name="string_do_you_have_account">Do you have account?</string>
    <string name="string_sign_in"> Sign In</string>
    <string name="string_signin_desc">It was popularised in the 1960s with the release of Letraset sheetscontaining Lorem Ipsum.</string>
    <string name="string_forgot_password">Forgot Password?</string>
    <string name="string_log_in">Log In</string>
    <string name="string_don_t_have_account">Don’t have account?</string>
    <string name="string_forget_password2">Forget Password</string>
    <string name="string_continue">Continue</string>
    <string name="string_authenticator">Authenticator</string>
    <string name="string_scan_the_2fa_qr_code">Scan the 2FA QR Code</string>
    <string name="string_add_account_manually">Add account manually</string>
    <string name="string_add_account">Add account</string>
    <string name="string_add_acount_desc">Enter the private key of the account you want to add.</string>
    <string name="string_account_name">Account name</string>
    <string name="string_enter_private_key">Enter private key</string>
    <string name="string_add">Add</string>
    <string name="string_localize_languages">Localize languages</string>
    <string name="string_new_tools">New Tools</string>
    <string name="string_app_lock">App lock</string>
    <string name="string_allow_screenshots">Disable screenshots</string>
    <string name="string_manage_and_generate_passwords">Manage and generate passwords</string>
    <string name="string_apploack_desc">Set a pin to protect your authenticator app</string>
    <string name="string_pin_lock">Pin lock</string>
    <string name="string_biometric_lock">Biometric lock</string>
    <string name="string_relock_time">ReLock time</string>
    <string name="string_set_pin">Set pin</string>
    <string name="string_set_your_pin">Set your pin</string>
    <string name="string_setting">Setting</string>
    <string name="string_get_premium">Get Premium</string>
    <string name="string_unlimited_access_to_all_features">Unlimited access to all features</string>
    <string name="string_localize_languages_setting">Localize languages</string>
    <string name="string_import_google_authenticator">Import google authenticator</string>
    <string name="string_delete_account">Delete Account</string>
    <string name="string_auto_fill_passwords">Auto fill passwords</string>
    <string name="string_import_and_export_passwords">Import and export passwords</string>
    <string name="string_rate_us">Rate us</string>
    <string name="string_share_our_app">share our app</string>
    <string name="string_terms_amp_condition"><![CDATA[Terms & condition]]></string>
    <string name="string_privacy_policy">Privacy policy</string>
    <string name="string_general">General</string>
    <string name="string_backup">Backup</string>
    <string name="string_security">Info &amp; Share</string>
    <string name="string_sync">Sync and cloud backup</string>
    <string name="string_google_cloud_server_client_id" translatable="false">159368296018-vhh2ompmq65o12a5f20mkas01539luga.apps.googleusercontent.com</string>
    <string name="stringenter_pin">Enter pin</string>
    <string name="string_enter_your_pin">Enter your pin</string>
    <string name="string_bottom_home">Home</string>
    <string name="string_bottom_new_tools">New tools</string>
    <string name="string_bottom_setting">Setting</string>
    <string name="delay_immediately">Immediately</string>
    <string name="delay_after_15s">After 15s</string>
    <string name="delay_after_30s">After 30s</string>
    <string name="delay_after_50s">After 50s</string>
    <string name="delay_after_1m">After 1m</string>
    <string name="delay_never">Never</string>
    <string name="string_logout">Logout</string>
    <string name="string_recently_deleted">Recently deleted</string>
    <string name="string_sync_now">Sync Now</string>
    <string name="string_subscription">Subscription</string>
    <string name="string_upgrade_to_pro">Upgrade to pro</string>
    <string name="string_secure_all_your_accounts">Secure all your accounts</string>
    <string name="string_fast_amp_easy_setup"><![CDATA[Fast & easy setup]]></string>
    <string name="string_auto_backup_amp_sync"><![CDATA[Auto backup & sync]]></string>
    <string name="string_auto_renewel_cancel_anytime">Auto renewel. Cancel anytime</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_camera">Camera</string>
    <string name="string_gallery">Gallery</string>
    <string name="string_no_data_found">No data found.</string>
    <string name="string_delete_all">Delete all</string>
    <string name="string_restore_all">Restore All</string>
    <string name="string_permanently_delete">Permanently delete</string>
    <string name="string_restore">Restore</string>
    <string name="string_lets_add_your_first_account">Lets add your first account</string>
    <string name="string_add_your_account">+ Add Your Account</string>
    <string name="string_add_new_account">+ Add New Account</string>
    <string name="string_search_accounts">Search accounts</string>
    <string name="string_no">No</string>
    <string name="string_yes">yes</string>
    <string name="string_account_dlt_confimation_text">Are you sure you want to delete\nyour account?</string>
    <string name="string_continue_to_checkout">Continue to checkout</string>
    <string name="string_delete">Delete</string>
    <string name="string_deleted_successfully">Deleted Successfully</string>
    <string name="string_something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="string_missing_permission_to_scan_qr_codes">Missing permission to scan QR codes.</string>
    <string name="string_scanned_qr_is_not_a_2fa_qr">Scanned qr is not a 2FA Qr</string>
    <string name="string_no_user_is_currently_logged_in">No user is currently logged in.</string>
    <string name="string_user_already_exists">User already exists.</string>
    <string name="string_authentication_failed">Authentication failed.</string>
    <string name="string_user_already_exists_with_same_email">User already exists with same email.</string>
    <string name="string_wrong_credentials">Wrong credentials.</string>
    <string name="string_repo_authentication_failed">Authentication failed.</string>
    <string name="string_singup_desc2">Secure your digital world with ease—sign up to protect what matters most!”</string>
    <string name="string_signin_desc2">Welcome back! Sign in to access your secure vault and stay protected.</string>
    <string name="string_forgot_password_new">Forgot Password</string>
    <string name="string_forgot_pass_desc">Forgot your password? Let’s get you back on track securely and quickly!</string>
    <string name="string_please_select_at_least_one">Please select at least one</string>
    <string name="string_lifetime_purchase_successful">Lifetime purchase is successful</string>
    <string name="string_subscription_successful">Subscribed successfully</string>
    <string name="string_data_saved_successfully">Data Saved Successfully</string>
    <string name="account_name_cannot_be_empty">Account name cannot be empty</string>
    <string name="private_key_cannot_be_empty">Private key cannot be empty</string>
    <string name="invalid_private_key_format">Invalid private key format</string>
    <string name="remove_this_account">Remove this account</string>
    <string name="move_to_trash">move to trash</string>
    <string name="remove">Remove</string>
    <string name="stay_one_step_ahead">Stay One Step Ahead</string>
    <string name="protect_what_matters">Protect what matters</string>
    <string name="access_made_easy">Access made easy</string>
    <string name="get_seamless_authentication_and_advanced_security_features_all_in_one_place">Get seamless authentication and advanced security features, all in one place.</string>
    <string name="protect_what_matters_with_enhanced_security_and_peace_of_mind">Protect what matters with enhanced security and peace of mind</string>
    <string name="import_from_same_device">Import from same device</string>
    <string name="step_1">Step 1:</string>
    <string name="step_2">Step 2:</string>
    <string name="step_3">Step 3:</string>
    <string name="step_4">Step 4:</string>
    <string name="step_5">Step 5:</string>
    <string name="open_your_authenticator_app">Open your Authenticator App.</string>
    <string name="go_to_settings_tap_on_quot_import_from_google_quot">Go to settings, tap on \"Import from Google\".</string>
    <string name="take_a_screenshot_when_you_see_the_export_qr_code">Take a screenshot when you see the export QR code.</string>
    <string name="open_the_authenticator_app_and_tap_on_quot_import_from_gallery_quot">Open the Authenticator App and tap on \"Import from Gallery\".</string>
    <string name="select_the_screenshot_from_your_gallery_the_app_will_extract_the_qr_code_and_import_your_accounts">Select the screenshot from your gallery. The app will extract the QR code and import your accounts.</string>
    <string name="select_from_gallery">Select from gallery</string>
</resources>