<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_colored_bg"
    tools:context=".ui.fragment.main.addAccountManually.AddAccountManuallyFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/string_add_account"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPremium"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
        app:srcCompat="@drawable/ic_primium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/string_add_acount_desc"
        android:textColor="#3B4054"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgBack"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/edt_height"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:cardCornerRadius="14dp"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3">

        <EditText
            android:id="@+id/edtAccountName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edt"
            android:textAlignment="viewStart"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/string_account_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textColor="@color/black" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/edt_height"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/edtPrivateKey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edt"
            android:textAlignment="viewStart"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/string_enter_private_key"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textColor="@color/black" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_primary"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_gradiant_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/string_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
</androidx.constraintlayout.widget.ConstraintLayout>