<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_colored_bg"
    tools:context=".ui.fragment.main.addNewAccount.AddNewFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/string_authenticator"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPremium"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
        app:srcCompat="@drawable/ic_primium" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSearch"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:visibility="gone"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgPremium"
        app:layout_constraintEnd_toStartOf="@+id/imgPremium"
        app:layout_constraintTop_toTopOf="@+id/imgPremium"
        app:srcCompat="@drawable/ic_search" />

    <LinearLayout
        android:id="@+id/ly_linear_add_account_with_qr_or_manually"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgScanQr"
            android:layout_width="322dp"
            android:layout_height="305dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_qr_home"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_scan_the_2fa_qr_code"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="48dp"
            android:textColor="@color/color_text_gray"
            android:textSize="19sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_or"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="12dp"
            android:textColor="@color/color_text_gray"
            android:textSize="17sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddAccountManually"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_primary"
            android:background="@drawable/bg_gradiant_button"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="12dp"
            android:text="@string/string_add_account_manually"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>